@@ -1,8 +1,9 @@
 {
-    "root_dir"      : "C:\\berrybrew",
-    "temp_dir"      : "C:\\berrybrew\\temp",
-    "debug"         : "false",
-    "strawberry_url": "http://strawberryperl.com",
-    "download_url"  : "http://strawberryperl.com/releases.json",
-    "custom_exec"   : "false"
+    "root_dir"        : "C:\\berrybrew",
+    "temp_dir"        : "C:\\berrybrew\\temp",
+    "debug"           : "false",
+    "strawberry_url"  : "http://strawberryperl.com",
+    "download_url"    : "http://strawberryperl.com/releases.json",
+    "custom_exec"     : "false",
+    "windows_homedir" : "false"
 }
